--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
     - name: Build and Test
       run: |
         python -m pytest
-
   deploy:
     runs-on: ubuntu-latest
 
@@ -45,8 +43,8 @@ jobs:
     - name: Push Docker Image
       run: |
         echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-        docker push fastapi_endpoint
-
+        docker tag fastapi_endpoint:latest fastapi_endpoint:latest
+        docker push fastapi_endpoint:latest
     - name: Deploy to Server (Replace with your deployment script)
       run: |
-        ssh user@your-server "docker pull fastapi_endpoint && docker-compose up -d"
+        ssh user@your-server "docker pull fastapi_endpoint:latest && docker-compose up -d"
