--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,13 +23,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Install pytest
-      run: |
-        pip install pytest
-
     - name: Build and Test
       run: |
-        python -m pytest
+        python -m pytest tests/  # Specify the directory where your tests are located
   deploy:
     runs-on: ubuntu-latest
 
@@ -50,6 +46,7 @@ jobs:
         echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
         docker tag fastapi_endpoint:latest fastapi_endpoint:latest
         docker push fastapi_endpoint:latest
+
     - name: Deploy to Server (Replace with your deployment script)
       run: |
         ssh user@your-server "docker pull fastapi_endpoint:latest && docker-compose up -d"
