--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,8 +55,8 @@ jobs:
     #     docker push fastapi_endpoint:latest
     - name: Push Docker Image
       run: |
-        echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin <registry-url>
-        docker tag fastapi_endpoint:latest <registry-url>/fastapi_endpoint:latest
+        echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin faisalibm/visable_task
+        docker tag fastapi_endpoint:latest faisalibm/visable_task/fastapi_endpoint:latest
         docker push faisalibm/visable_task/fastapi_endpoint:latest
 
     - name: Deploy to Server (Replace with your deployment script)
