--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,8 @@ jobs:
       run: |
         pip install pytest
 
-
+    - name: Check Docker Daemon Status
+      run: docker info
 
     - name: Build and Test
       run: |
@@ -48,17 +49,17 @@ jobs:
     - name: Build Docker Image
       run: docker build -t fastapi_endpoint .
 
-    # - name: Push Docker Image
-    #   run: |
-    #     echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-    #     docker tag fastapi_endpoint:latest fastapi_endpoint:latest
-    #     docker push fastapi_endpoint:latest
+    - name: Retry Docker Login
+      run: |
+        for i in {1..3}; do
+          echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin faisalibm/visable_task && break || sleep 5
+        done
+
     - name: Push Docker Image
       run: |
-        echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin faisalibm/visable_task
         docker tag fastapi_endpoint:latest faisalibm/visable_task/fastapi_endpoint:latest
         docker push faisalibm/visable_task/fastapi_endpoint:latest
 
     - name: Deploy to Server (Replace with your deployment script)
       run: |
-        ssh user@your-server "docker pull fastapi_endpoint:latest && docker-compose up -d"
+        ssh user@your-server "docker pull faisalibm/visable_task/fastapi_endpoint:latest && docker-compose up -d"
