--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,74 @@
+# name: CI/CD Pipeline
+
+# on:
+#   push:
+#     branches:
+#       - master
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     - name: Checkout Repository
+#       uses: actions/checkout@v2
+
+#     - name: Set up Python
+#       uses: actions/setup-python@v2
+#       with:
+#         python-version: 3.8.18
+
+#     - name: Install Dependencies
+#       run: |
+#         python -m pip install --upgrade pip
+#         pip install -r requirements.txt
+
+#     - name: Install pytest
+#       run: |
+#         pip install pytest
+
+#     - name: Check Docker Daemon Status
+#       run: docker info
+
+#     - name: Build and Test
+#       run: |
+#         python -m pytest tests/test_example.py  # Specify the directory where your tests are located
+
+#   deploy:
+#     runs-on: ubuntu-latest
+
+#     needs: build
+
+#     steps:
+#     - name: Checkout Repository
+#       uses: actions/checkout@v2
+
+#     - name: Set up Docker
+#       uses: docker/setup-buildx-action@v1
+
+#     - name: Build Docker Image
+#       run: docker build -t fastapi_endpoint .
+
+#     - name: Retry Docker Login
+#       run: |
+#         for i in {1..3}; do
+#           echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin faisalibm/visable_task && break || sleep 5
+#         done
+
+#     - name: Push Docker Image
+#       run: |
+#         docker tag fastapi_endpoint:latest faisalibm/visable_task:fastapi_endpoint
+#         docker push faisalibm/visable_task:fastapi_endpoint
+
+#     - name: Deploy to Server (Replace with your deployment script)
+#       run: |
+#         ssh user@your-server "docker pull faisalibm/visable_task:fastapi_endpoint && docker-compose up -d"
+
+
+
+# ================================================================================================================ #
+
+
 name: CI/CD Pipeline
 
 on:
@@ -60,6 +131,6 @@ jobs:
         docker tag fastapi_endpoint:latest faisalibm/visable_task:fastapi_endpoint
         docker push faisalibm/visable_task:fastapi_endpoint
 
-    - name: Deploy to Server (Replace with your deployment script)
-      run: |
-        ssh user@your-server "docker pull faisalibm/visable_task:fastapi_endpoint && docker-compose up -d"
+
+
+
